2010-02-22  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-atom-xmltree-to-status-datum):
	Call `twittering-decode-html-entities' to decode entities
	properly.

2010-02-20  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-current-timeline-spec): Check
	`spec-string' is a string before calling
	`twittering-string-to-timeline-spec'.
	(twittering-get-and-render-timeline): Likewise.
	(twittering-read-timeline-spec-with-completion): Likewise.

	* twittering-mode.el (twittering-read-timeline-spec-with-completion):
	Return nil explicitly when `twittering-string-to-timeline-spec'
	return nil.

	* twittering-mode.el (twittering-retrieve-image): Use `unless'
	instead of `when'.

2010-02-19  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-delete-ca-cert-file): New defun.
	(twittering-ensure-ca-cert): Add it as a hook into
	`kill-emacs-hook'.

	* twittering-mode.el (twittering-get-error-message): New defun to
	pickup an error message from a xmltree.
	(twittering-http-get-default-sentinel): Use it.
	(twittering-http-get-list-index-sentinel): Likewise.
	(twittering-http-post-default-sentinel): Likewise.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Call `twittering-get-response-body' instead of `xml-parse-region'.

2010-02-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-set-window-end): use
	`window-text-height' instead of `window-body-height' for Emacs21.

2010-02-18  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-native-retweet): Add a margin for
	wide characters.
	(twittering-favorite): Likewise.

	* twittering-mode.el (twittering-extract-timeline-spec): Delete an
	unused argument to `error'.

	* twittering-mode.el (twittering-format-status): Use the return
	value of the flet'ed function `attr' directly for the specifier
	"%r".
	(twittering-format-status): Reverse condition for the specifier
	"%R".
